k8s-rpi-apps-syncthing/active/syncthing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-shared
  annotations:
    avp.kubernetes.io/path: "k8secrets/ingresses"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  ingressClassName: nginx
  rules:
    - host: <syncthinghostname>.<domainname>
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: syncthing-http
              port:
                number: 80
